docs: add docs to route get user authenticated
